--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -79,8 +79,9 @@ jobs:
             
       - name: Ruby linting
         run: bundle exec rubocop
-            
-    
-              
-      
-     
+
+      - name: Upload code coverage results
+        uses: actions/upload-artifact@v3
+        with:
+          name: code-coverage-report
+          path: public/js_coverage/lcov.info
