--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -75,7 +75,7 @@ jobs:
         run: yarn lint-non-build
       
       - name: Ruby rspec test suite
-        run : COVERAGE=true bundle exec rspec spec/ --color --profile --format documentation
+        run : COVERAGE=true bundle exec rspec spec/features/articles_edited_spec.rb --color --profile --format documentation
             
       - name: Ruby linting
         run: bundle exec rubocop
