--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,24 +1,24 @@
 name: CI
 
 # Controls when the workflow will run
-on: ['push', 'pull_request_target', 'workflow_dispatch']
+on: ['push', 'pull_request', 'workflow_dispatch']
 
 jobs:
   build:
     # The type of runner that the job will run on
-    runs-on: ubuntu-latest 
+    runs-on: ubuntu-latest
 
     steps:
       # checks-out your repository under $GITHUB_WORKSPACE , so that workflow can access it.
       - name: checkout
         uses: actions/checkout@v2
-      
+
       - name: install Pandoc
         uses: r-lib/actions/setup-pandoc@v1
-      
+
       - name: setup Redis
         uses: supercharge/redis-github-action@1.4.0
-      
+
       # to speed up the execution time of Github Actions
       - name: setup caching for vendor and node_modules
         uses: actions/cache@v2
@@ -30,24 +30,24 @@ jobs:
           key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
           restore-keys: |
                 ${{ runner.os }}-yarn-
-      
+
       # Setting up MariaDB based upon 'config/database.example.yml'
       - name: setup MariaDB server
-        uses: getong/mariadb-action@v1.1  
+        uses: getong/mariadb-action@v1.1
         with:
-          host port: 3306 
-          mariadb version: '10.5' 
-          mysql database: 'dashboard_testing' 
+          host port: 3306
+          mariadb version: '10.5'
+          mysql database: 'dashboard_testing'
           mysql user: 'wiki'
           mysql password: 'wikiedu'
-          
-      # Starting ruby 
+
+      # Starting ruby
       - name: setup Ruby
-        uses: ruby/setup-ruby@v1    
+        uses: ruby/setup-ruby@v1
         with:
            ruby-version: 2.7.1
            bundler-cache: true
-     
+
       - name: setup Node
         uses: actions/setup-node@v2
         with:
@@ -62,26 +62,25 @@ jobs:
             cp config/application.example.yml config/application.yml
             cp config/database.example.yml config/database.yml
             bin/rails db:migrate RAILS_ENV=test
-      
+
       #Testing the pushed code onwards
-      
-      - name: JavaScript test suite 
+
+      - name: JavaScript test suite
         run: |
             yarn
             yarn coverage
-            yarn run test 
-      
+            yarn run test
+
       - name: JavaScript linting
         run: yarn lint-non-build
-      
+
       - name: Ruby rspec test suite
         run : COVERAGE=true bundle exec rspec spec/features/articles_edited_spec.rb --color --profile --format documentation
 
-      - name: Comment coverage
-        uses: romeovs/lcov-reporter-action@v0.3.1
+      - uses: actions/upload-artifact@v3
         with:
-          lcov-file: public/js_coverage/lcov.info
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-            
+          name: coverage-report
+          path: public/js_coverage/lcov.info
+
       - name: Ruby linting
         run: bundle exec rubocop
