--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,7 +1,7 @@
 name: CI
 
 # Controls when the workflow will run
-on: ['push', 'pull_request', 'workflow_dispatch']
+on: ['push', 'pull_request_target', 'workflow_dispatch']
 
 jobs:
   build:
