--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -68,19 +68,19 @@ jobs:
       - name: JavaScript test suite 
         run: |
             yarn
-            yarn build
-            yarn run test 
+            yarn coverage
       
       - name: JavaScript linting
         run: yarn lint-non-build
       
       - name: Ruby rspec test suite
-        run : COVERAGE=true bundle exec rspec spec/ --color --profile --format documentation
-            
+        run : COVERAGE=true bundle exec rspec spec/features/articles_edited_spec.rb --color --profile --format documentation
+      
+      - name: Write Coverage
+        uses: romeovs/lcov-reporter-action@v0.3.1
+        with:
+          lcov-file: public/js_coverage/lcov.info
+          delete-old-comments: true
+      
       - name: Ruby linting
         run: bundle exec rubocop
-            
-    
-              
-      
-     
